backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    labels: 
      app: backend
spec:
    replicas: 2
    selector: 
      matchLabels:  
        app: backend
    template:
        metadata:
          labels:
            app: backend
        spec:
          containers:
          - name: backend
            image: 086241318794.dkr.ecr.eu-central-1.amazonaws.com/sim-app-backend:1.0.0
            imagePullPolicy: Always
            ports:
            - containerPort: 8000
            readinessProbe:
              httpGet:
                path: /health
                port: 8000
              initialDelaySeconds: 5
              periodSeconds: 10
            livenessProbe:
              httpGet:
                path: /health
                port: 8000
              initialDelaySeconds: 15
              periodSeconds: 20
            volumeMounts:
            - name: known-hosts-volume
              mountPath: /root/.ssh/known_hosts
              subPath: known_hosts
              readOnly: true
            - name: private-key-volume
              mountPath: /root/.ssh/id_rsa
              subPath: id_rsa
              readOnly: true
          volumes:
          - name: known-hosts-volume
            configMap:
              name: known-hosts-configmap
          - name: private-key-volume
            secret:
              secretName: private-key-secret
              defaultMode: 0400
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
