frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    labels: 
      app: frontend
spec:
    replicas: 2
    selector: 
      matchLabels:  
        app: frontend
    template:
        metadata:
          labels:
            app: frontend
        spec:
          containers:
          - name: frontend
            image: 086241318794.dkr.ecr.eu-central-1.amazonaws.com/sim-app-frontend:1.1.0
            imagePullPolicy: Always
            ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
